<resources>
    <!-- panel -->
    <string name="app_name">myShift Manager</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="reports">Monthly Reports</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <!-- login -->
    <string name="login_title">Welcome!</string>
    <string name="login_subtitle">Nice to see you,</string>
    <string name="login_text">Choose one of the options to login</string>
    <string name="login_btn_phone">Phone</string>
    <string name="login_btn_gmail">Gmail</string>
    <!-- login phone fragment -->
    <string name="phone_title">Phone Number</string>
    <string name="phone_text">Please enter your phone number to continue</string>
    <string name="phone_hint">Number</string>
    <string name="phone_helper">Required*</string>
    <string name="phone_login">Login</string>
    <!-- login phone verification fragment -->
    <string name="phone_verification_title">Verification Code</string>
    <string name="phone_verification_text">Please enter the verification code we sent to</string>
    <string name="phone_verification_hint">Code</string>
    <string name="phone_verification_continue">Continue</string>
    <string name="phone_verification_number">Number</string>
    <string name="phone_verification_resend_text">Did not get OTP? <b>Resend</b></string>
    <!-- make profile -->
    <string name="make_first_name">First Name</string>
    <string name="make_title">Welcome, let\'s make new account</string>
    <string name="make_last_name">Last Name</string>
    <string name="make_email">Email</string>
    <string name="make_currency">Select currency</string>
    <string name="make_register">Register</string>
    <!-- settings -->
    <string name="settings_currency">Select Currency</string>
    <string name="settings_time">Select Time format</string>
    <string name="settings_date">Select Date format</string>
    <string name="settings_add_workplace">Workplaces</string>
    <string name="settings_save">Save</string>
    <!-- profile -->
    <string name="profile_first_name"> <b>First Name:</b></string>
    <string name="profile_last_name"> <b>Last Name:</b></string>
    <string name="profile_email"> <b>Email:</b></string>
    <string name="profile_currency"> <b>Currency:</b></string>
    <string name="profile_temp">Text..........</string>
    <string name="profile_add_workplace">Add workplace</string>
    <string name="profile_add_shift">Add shift</string>
    <string name="profile_logout">Log out</string>
    <!-- reports -->
    <string name="reports_month">February 22</string>
    <string name="reports_amount">1500</string>
    <string name="reports_currency">₪</string>
    <!-- workplace -->
    <string name="workplace_title"> <b>Workplace</b></string>
    <string name="workplace_name">Workplace Name</string>
    <string name="workplace_color">Select indicator color</string>
    <string name="workplace_hourly_wage">Hourly Wage</string>
    <string name="workplace_vacation">Vacation payments</string>
    <string name="workplace_deduction">Deduction pre shift</string>
    <string name="workplace_bonuses">Bonuses pre shift</string>
    <string name="workplace_break">Break time (unpaid in minutes)</string>
    <string name="workplace_daily_travel_expenses">Daily travel expenses</string>
    <string name="workplace_monthly_travel_expenses">Monthly travel expenses</string>
    <string name="workplace_save">Save</string>
    <!-- shift -->
    <string name="shift_title"> <b>Shift</b></string>
    <string name="shift_workplace">Selected workplace:</string>
    <string name="shift_workplace_name">Name</string>
    <string name="shift_from">From</string>
    <string name="shift_to">To</string>
    <string name="shift_total_time">00:00 Hours</string>
    <string name="shift_remove">Remove this shift</string>
    <string name="shift_create">Create</string>

    <!-- dialog workplace -->
    <string name="dialog_workplaces_title"> <b>Select Workplace:</b></string>

    <!-- dialog color -->
    <string name="dialog_color_title"> <b>Select Color:</b></string>
    <string name="dialog_color_done">Done</string>


    <!-- shift_item -->
    <string name="shift_item_title_workplace"> <b>Workplace:</b></string>
    <string name="shift_item_title_start"> <b>Shift started:</b></string>
    <string name="shift_item_title_end"> <b>Shift ended:</b></string>
    <string name="shift_item_title_revenue"> <b>Revenue:</b></string>
    <string name="shift_item_workplace">someplace</string>
    <string name="shift_item_start">12/10/2022 08:00</string>
    <string name="shift_item_end">12/10/2022 16:30</string>
    <string name="shift_item_revenue">250</string>
    <string name="shift_item_currency">₪</string>

    <string-array name="currency">
        <item>₪  Shekel</item>
        <item>$  US Dollar</item>
        <item>€  Euro</item>
    </string-array>

    <string-array name="time">
        <item>24h</item>
        <item>12h</item>
    </string-array>

    <string-array name="date">
        <item>dd/mm/yy</item>
        <item>mm/dd/yy</item>
    </string-array>

</resources>