<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_Login"
    android:background="@drawable/img_login_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_LBL_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="5dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:minLines="1"
        android:scaleType="centerCrop"
        android:text="@string/login_title"
        android:textColor="@color/white_100" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_LBL_subtitle"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/login_LBL_title"
        android:layout_alignStart="@+id/login_LBL_title"
        android:layout_marginStart="10dp"
        android:autoSizeTextType="uniform"
        android:gravity="start"
        android:maxLines="1"
        android:minLines="1"
        android:scaleType="centerCrop"
        android:text="@string/login_subtitle"
        android:textColor="@color/grey_100" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_LBL_text"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/login_LBL_subtitle"
        android:layout_alignStart="@+id/login_LBL_subtitle"
        android:layout_alignEnd="@+id/login_LBL_subtitle"
        android:autoSizeTextType="uniform"
        android:gravity="start"
        android:maxLines="1"
        android:minLines="1"
        android:scaleType="centerCrop"
        android:text="@string/login_text"
        android:textColor="@color/grey_100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_phone"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_LBL_text"
        android:layout_alignStart="@+id/login_LBL_text"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_button"
        android:text="@string/login_btn_phone"
        android:textAllCaps="false"
        android:textColor="@color/white_100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_gmail"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_below="@+id/login_BTN_phone"
        android:layout_alignStart="@+id/login_BTN_phone"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_button"
        android:text="@string/login_btn_gmail"
        android:textAllCaps="false"
        android:textColor="@color/white_100" />

</RelativeLayout>