<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="8dp"
    app:cardBackgroundColor="@color/shift_card"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:strokeColor="@color/red_700"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="6">

            <LinearLayout
                android:id="@+id/shift_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/shift_item_title_workplace"
                    android:textColor="@color/grey_700"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/shift_LBL_workplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:maxLines="1"
                    android:minLines="1"
                    android:text="@string/shift_item_workplace"
                    android:textColor="@color/grey_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shift_layout"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/shift_item_title_start"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/shift_item_title_end"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/shift_LBL_end"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/shift_LBL_revenue"
                        android:gravity="start"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/shift_item_title_revenue"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/shift_LBL_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/shift_item_start"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/shift_LBL_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="start"
                        android:maxLines="1"
                        android:minLines="1"
                        android:text="@string/shift_item_end"
                        android:textColor="@color/grey_700"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/shift_LBL_revenue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/shift_LBL_end"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:maxLines="1"
                            android:minLines="1"
                            android:text="@string/shift_item_revenue"
                            android:textColor="@color/grey_700"
                            android:textSize="14sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/shift_LBL_currency"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/shift_LBL_end"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="2dp"
                            android:gravity="start"
                            android:maxLines="1"
                            android:minLines="1"
                            android:text="@string/shift_item_currency"
                            android:textColor="@color/grey_700"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reports_BTN_edit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_alpha"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/img_edit"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reports_BTN_delete"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_alpha"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/img_delete"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="20dp" />

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>