<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_Panel"
    android:background="@drawable/img_background_white">

        <View
            android:id="@+id/profile_View_1"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_bottom" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@+id/profile_View_1"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_IMG_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/profile_View_1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:scaleType="centerInside"
        android:src="@drawable/img_profile" />


    <LinearLayout
        android:id="@+id/profile_Layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_View_1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/profile_first_name"
            android:textColor="@color/grey_700" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_LBL_first_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="18sp"
            android:gravity="start"
            android:text="@string/profile_temp"
            android:textColor="@color/grey_700" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_Layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_Layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/profile_last_name"
            android:textColor="@color/grey_700" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_LBL_last_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:minLines="1"
            android:gravity="start"
            android:text="@string/profile_temp"
            android:textColor="@color/grey_700" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_Layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_Layout_2"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/profile_email"
            android:textColor="@color/grey_700" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_LBL_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            android:minLines="1"
            android:textSize="18sp"
            android:gravity="start"
            android:text="@string/profile_temp"
            android:textColor="@color/grey_700" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_Layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_Layout_3"
        android:layout_marginTop="5dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="start"
            android:text="@string/profile_currency"
            android:textColor="@color/grey_700" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_LBL_currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:minLines="1"
            android:gravity="start"
            android:text="@string/profile_temp"
            android:textColor="@color/grey_700" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/profile_Layout_4"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/right_rounded_button"
        android:text="@string/profile_add_workplace"
        android:textAllCaps="false"
        android:textColor="@color/white_100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_BTN_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/profile_BTN_add"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/right_rounded_button"
        android:text="@string/profile_logout"
        android:textAllCaps="false"
        android:textColor="@color/white_100" />

</RelativeLayout>